refactor: rename endpoint methods
