# src/main/resources/swagger/ssu-bench.yaml
@@ -18,6 +18,7 @@ tags:
 paths:
   /auth/register:
     post:
+      operationId: postAuthRegister
       tags: [ Auth ]
       security: [ ]
       summary: Register new user
@@ -39,6 +40,7 @@ paths:
 
   /auth/login:
     post:
+      operationId: postAuthLogin
       tags: [ Auth ]
       security: [ ]
       summary: Login
@@ -60,6 +62,7 @@ paths:
 
   /tasks:
     post:
+      operationId: postCreateTask
       tags: [ Tasks ]
       summary: Create task
       security:
@@ -85,6 +88,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
 
     get:
+      operationId: getListTasks
       tags: [ Tasks ]
       summary: List tasks
       security:
@@ -108,6 +112,7 @@ paths:
 
   /tasks/{taskId}:
     get:
+      operationId: getTaskById
       tags: [ Tasks ]
       summary: Get task by id
       security:
@@ -128,6 +133,7 @@ paths:
 
   /tasks/{taskId}/publish:
     post:
+      operationId: postPublishTask
       tags: [ Tasks ]
       summary: Publish task
       security:
@@ -150,6 +156,7 @@ paths:
 
   /tasks/{taskId}/cancel:
     post:
+      operationId: postCancelTask
       tags: [ Tasks ]
       summary: Cancel task
       security:
@@ -174,6 +181,7 @@ paths:
 
   /tasks/{taskId}/complete:
     post:
+      operationId: postCompleteTask
       tags: [ Tasks ]
       summary: Mark task as completed
       security:
@@ -198,6 +206,7 @@ paths:
 
   /tasks/{taskId}/confirm:
     post:
+      operationId: postConfirmTask
       tags: [ Tasks ]
       summary: Confirm completion and transfer payment
       security:
@@ -222,6 +231,7 @@ paths:
 
   /tasks/{taskId}/bids:
     get:
+      operationId: getTaskBids
       tags: [ Bids ]
       summary: List bids for task
       security:
@@ -245,6 +255,7 @@ paths:
           $ref: '#/components/responses/NotFound'
 
     post:
+      operationId: postCreateBid
       tags: [ Bids ]
       summary: Create bid
       security:
@@ -269,6 +280,7 @@ paths:
 
   /bids/{bidId}/accept:
     post:
+      operationId: postAcceptBid
       tags: [ Bids ]
       summary: Accept bid
       security:
@@ -293,6 +305,7 @@ paths:
 
   /admin/users:
     get:
+      operationId: getListUsers
       tags: [ Admin ]
       summary: List users
       security:
@@ -314,6 +327,7 @@ paths:
 
   /admin/users/{userId}/block:
     post:
+      operationId: postBlockUser
       tags: [ Admin ]
       summary: Block user
       security:
@@ -332,6 +346,7 @@ paths:
 
   /admin/users/{userId}/unblock:
     post:
+      operationId: postUnblockUser
       tags: [ Admin ]
       summary: Unblock user
       security:
